package com.swe573.socialhub.enums;

public enum ApprovalStatus {
    PENDING,
    APPROVED,
    DENIED
}