package com.swe573.socialhub.enums;

public enum BadgeType {
    newcomer,
    mentor,
    superMentor,
    regular,
    communityBuilder,
    guru
}
