package com.swe573.socialhub.enums;

public enum FlagStatus {
    active,
    inactive
}
