package com.swe573.socialhub.enums;

public enum FlagType {
    service,
    event,
    user
}
