package com.swe573.socialhub.enums;

public enum LocationType {
    Online,
    Physical
}
