package com.swe573.socialhub.enums;

public enum ServiceStatus {
    ONGOING,
    APPROVED,
    COMPLETED,
    CANCELLED
}